--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "18.2.0",
+    "react-owl-carousel": "^2.3.3",
+    "sass": "^1.62.1"
   }
 }
