--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "immutability-helper": "^3.1.1",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
