--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.1",
+    "@mui/styles": "^5.13.1",
+    "aphrodite": "^2.4.0",
+    "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "immutability-helper": "^3.1.1",
+    "jquery": "^3.7.0",
+    "lodash": "^4.17.21",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-owl-carousel": "^2.3.3",
     "sass": "^1.62.1"
